2004-06-19  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/lm1100.xml: Added link to patch for compiling with gcc
	  3.4.

2004-06-10  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/117.xml: Fixed bug in .upp file names (Thanks to Marcelo
	  Ricardo Leitner, mrl at conectiva dot com dot br).

	* opt/218.xml: Fixed bug of "Dry Time" option of the "pcl3" only
	  valid for certain printers (Thanks to Marcelo Ricardo Leitner,
	  mrl at conectiva dot com dot br).

	* printer/Epson-EPL-6200L.xml: Fixed recommended driver (Thanks to
	  Marcelo Ricardo Leitner, mrl at conectiva dot com dot br).

	* printer/HP-DesignJet_2500CP.xml: Fixed recommended driver
	  (Thanks to Marcelo Ricardo Leitner, mrl at conectiva dot com dot
	  br).

	* driver/oce9050.xml: Fixed GhostScript command line (Thanks to
	  Marcelo Ricardo Leitner, mrl at conectiva dot com dot br).

	* driver/Postscript.xml, opt/Postscript-Resolution.xml: Added
	  HP DesignJet 2500CP.

2004-04-27  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/ppmtomd-Primer.xml, opt/ppmtomd-PrintingMethod.xml,
	  driver/ppmtomd.xml: Added new options for the driver "ppmtomd"
	  version 1.3.

	* printer/Citizen-printiva1700.xml,
	  printer/Citizen-printiva700.xml, printer/Okidata-DP_5000.xml,
	  printer/Alps*.xml: Updated text and ratings due to "ppmtomd"
	  version 1.3.

2004-04-20  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/drv_z42-PrintoutMode.xml: Fixed resolution settings in
	  "PrintoutMode" option for the "drv_z42" driver.

	* printer/HP-Business_Inkjet_2300.xml,
	  printer/HP-OfficeJet_4200.xml, printer/HP-OfficeJet_9100.xml,
	  printer/HP-PSC_1310.xml, driver/Postscript.xml: Added new
	  printer models.

2004-03-29  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/ppmtomd.xml, driver/ppmtocpva.xml: Updated URL.

2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_Photo_R800.xml,
	  printer/Epson-Stylus_Photo_R300.xml,
	  printer/Epson-Stylus_Photo_R200.xml,