@@ -26,7 +26,15 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <commandset>PJL,MLC,POSTSCRIPT,PJL,PCLXL,PCL</commandset>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 4300</model>
+    </parallel>
+    <snmp>
+      <description>hp LaserJet 4300</description>
+    </snmp>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver><!--verified--><!--no "contrib_url"-->
   <comments>
