@@ -1,3 +1,8 @@
+2004-06-24  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-LaserJet_4300.xml: Added IEEE 1284 and SNMP
+	information, gleaned from RH bug #125681.
+
 2004-06-19  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/lm1100.xml: Added link to patch for compiling with gcc
